add license and simple case