@@ -199,6 +199,7 @@
       <!--plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
+        <version>2.10</version>
         <executions>
           <execution>
             <goals>
@@ -209,19 +210,59 @@
         </executions>
       </plugin-->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-maven-plugin</artifactId>
+        <version>1.0</version>
+        <!-- Note config is repeated in surefire config -->
+        <configuration>
+          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+          <junitxml>.</junitxml>
+          <filereports>SparkTestSuite.txt</filereports>
+          <argLine>-ea -Xmx3g -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m</argLine>
+          <stderr/>
+          <environmentVariables>
+            <!--
+              Setting SPARK_DIST_CLASSPATH is a simple way to make sure any child processes
+              launched by the tests have access to the correct test-time classpath.
+            -->
+            <SPARK_DIST_CLASSPATH>${test_classpath}</SPARK_DIST_CLASSPATH>
+            <JAVA_HOME>${java.home}</JAVA_HOME>
+          </environmentVariables>
+          <systemProperties>
+            <derby.system.durability>test</derby.system.durability>
+            <java.awt.headless>true</java.awt.headless>
+            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
+            <spark.test.home>${session.executionRootDirectory}</spark.test.home>
+            <spark.testing>1</spark.testing>
+            <spark.ui.enabled>false</spark.ui.enabled>
+            <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
+            <spark.driver.allowMultipleContexts>true</spark.driver.allowMultipleContexts>
+            <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
+          </systemProperties>
+        </configuration>
         <executions>
           <execution>
-            <id>add-default-sources</id>
-            <phase>generate-sources</phase>
+            <id>test</id>
             <goals>
-              <goal>add-source</goal>
+              <goal>test</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>prepare-test-jar</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>test-jar</goal>
             </goals>
             <configuration>
-              <sources>
-                <source>shims/v${spark.shim.version}/src/main/scala</source>
-              </sources>
+              <excludes>
+                <exclude>log4j.properties</exclude>
+              </excludes>
             </configuration>
           </execution>
         </executions>
